fix: add a git cli version
Workaround for: https://github.com/rust-lang/git2-rs/issues/1057

--- a/.github/scripts/Containerfile
+++ b/.github/scripts/Containerfile
@@ -11,6 +11,7 @@ RUN mkdir /stage
 # install zlib and cleanup
 
 RUN dnf install --installroot /stage --setop install_weak_deps=false --nodocs -y zlib openssl
+RUN dnf install --installroot /stage --setop install_weak_deps=false --nodocs -y git # as long as we need the CLI version
 RUN dnf clean all --installroot /stage
 
 # prepare our binary
