chore: hermetic build

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -166,6 +166,7 @@ trustify-module-user = { path = "modules/user" }
 trustify-server = { path = "server", default-features = false }
 trustify-test-context = { path = "test-context" }
 trustify-ui = { git = "https://github.com/trustification/trustify-ui.git", branch = "publish/main" }
+#trustify-ui = { git = "https://github.com/ctron/trustify-ui.git", branch = "feature/embed_code_1" }
 
 # These dependencies are active during both the build time and the run time. So they are normal dependencies
 # as well as build-dependencies. However, we can't control feature flags for build dependencies the way we do
