ci: show npm version

--- a/.github/workflows/build-binary.yaml
+++ b/.github/workflows/build-binary.yaml
@@ -153,6 +153,8 @@ jobs:
 
       - run: mkdir -p upload
 
+      - run: npm --version
+
       - name: Build | Build
         shell: bash
         env:
