--- a/.github/workflows/build-binary.yaml
+++ b/.github/workflows/build-binary.yaml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Create vendor archive
         run: |
-          ./vendor.sh
+          .github/scripts/vendor.sh
 
       - name: Stage vendor archive
         run: |
