--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ csaf-walker = { version = "0.14.1", default-features = false }
 csv = "1.3.0"
 cve = "0.4.0"
 cvss = { git = "https://github.com/dejanb/cvss" }
+cvss-old = { package = "cvss", version = "2" }
 deepsize = "0.2.0"
 fixedbitset = "0.5.7"
 flate2 = "1.0.35"
