--- a/Cargo.toml
+++ b/Cargo.toml
@@ -209,3 +209,5 @@ csaf = { git = "https://github.com/trustification/csaf-rs", rev = "17620a225744b
 
 # required due to https://github.com/doubleopen-project/spdx-rs/pull/35
 spdx-rs = { git = "https://github.com/ctron/spdx-rs", branch = "feature/add_alias_2" }
+
+test-log = { path = "../test-log" }
